<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrasherX</string>
    <string name="title_crasher_crashed">%1$s Crashed</string>
    <string name="title_crasher_exception">%1$s in %2$s</string>
    <string name="title_crasher_crash_notification">%1$s crashed: %2$s at %3$s</string>
    <string name="title_crasher_crash_notifications">Error Messages</string>

    <string name="msg_crasher_crashed">Unfortunately, %1$s has stopped working. You can report this as a bug using the buttons below, or you can try to fix it yourself. When reporting the bug, please include as much detail as possible to help fix the issue as quickly as possible. Please note that your device info, such as the manufacturer and model number, may be included in the bug report.</string>
    <string name="msg_crasher_crash_notification">Click to file a bug report.</string>

    <string name="title_crasher_copy">Copy</string>
    <string name="title_crasher_share">Share</string>
    <string name="title_crasher_email">Email</string>
    <string name="title_crasher_send_email">Send Email</string>
    <string name="title_crasher_stack_trace">Stack Trace</string>
    <string name="has_copied_text">Has Copied Text</string>
    <string name="device">Device Info</string>

</resources>